UPDATE : 블로그 설정 변경 - 댓글, 구글 애널리틱스, 네비게이션 기능 활성화

--- a/_posts/Projects/NCBT/2024-09-27-setting.md
+++ b/_posts/Projects/NCBT/2024-09-27-setting.md
@@ -1,6 +1,6 @@
 ---
 title: "[NCBT project] 프로젝트 설계 및 세팅"
-excerpt: "NCBT 프로젝트 시작!"
+# excerpt: "NCBT 프로젝트 시작!"
 
 writer: Hwayeon Hong
 categories:
@@ -11,8 +11,8 @@ tags:
 toc: true
 toc_sticky: true
 
-date: 2024-11-27
-last_modified_at: 2024-11-27
+date: 2024-09-27
+last_modified_at: 2024-09-27
 ---
 
 📢 NCBT 프로젝트는 '기획 - 분석 - 설계 - 구현 - 테스트 - 운영' 이라는 프로그래밍의 라이프사이클을 지켜 진행했지만 추후 회고록을 돌아볼 때 '프로젝트 세팅' 부분을 가장 많이 찾아볼 것 같아서 이 부분을 먼저 작성했다.
