ADD : 네이게이션 기능을 위한 index 파일 생성

--- a/_posts/Projects/NCBT/2024-09-27-setting.md
+++ b/_posts/Projects/NCBT/2024-09-27-setting.md
@@ -4,7 +4,7 @@ title: "[NCBT project] 프로젝트 설계 및 세팅"
 
 writer: Hwayeon Hong
 categories:
-  - Projects
+  - projects
 tags:
   - [java, spring boot, gradle, mybatis, mysql]
 
