UPDATE : scss 설정파일 원복

--- a/_posts/Projects/NCBT/2024-09-27-setting.md
+++ b/_posts/Projects/NCBT/2024-09-27-setting.md
@@ -1,10 +1,9 @@
 ---
 title: "[NCBT project] 프로젝트 설계 및 세팅"
-# excerpt: "NCBT 프로젝트 시작!"
+# excerpt: "어 잠깐 이거 바로바로 되는건감? 아니네..."
 
 writer: Hwayeon Hong
-categories:
-  - projects
+
 tags:
   - [java, spring boot, gradle, mybatis, mysql]
 
