UPDATE : 글 제목 수정

--- a/_posts/Projects/NCBT/2024-10-26-setting.md
+++ b/_posts/Projects/NCBT/2024-10-26-setting.md
@@ -1,5 +1,5 @@
 ---
-title: "[NCBT project] 프로젝트 설계 및 세팅"
+title: "NCBT 프로젝트 설계 및 세팅"
 excerpt: "-"
 
 writer: Hwayeon Hong
@@ -37,8 +37,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/ncbt
-    username: root
-    password: "0000"
+    username: "" #ID
+    password: "" #PW
 
 # 마이바티스 설정
 mybatis:
