--- a/_posts/TroubleShooting/2024-10-29-jwt.md
+++ b/_posts/TroubleShooting/2024-10-29-jwt.md
@@ -3,8 +3,9 @@ title: "[트러블슈팅] JWT claims 대괄호 사용 에러"
 excerpt: "-"
 
 writer: Hwayeon Hong
-# categories:
-#   - projects
+categories:
+  - TroubleShooting
+permalink: /troubleShooting/:title/
 tags:
   - [spring security, jwt]
 
