UPDATE : 네비게이션 추가 및 폴더별 인덱스 화면 생성

--- a/_posts/Projects/2024-10-26-setting.md
+++ b/_posts/Projects/2024-10-26-setting.md
@@ -3,9 +3,8 @@ title: "NCBT 프로젝트 설계 및 세팅"
 excerpt: "-"
 
 writer: Hwayeon Hong
-categories:
-  - projects
-permalink: /projects/NCBT/:title/
+# categories: projects
+# permalink: /projects/:title/
 tags:
   - [java, spring boot, gradle, mybatis, mysql]
 
