--- a/_posts/Projects/NCBT/2024-10-26-setting.md
+++ b/_posts/Projects/NCBT/2024-10-26-setting.md
@@ -3,8 +3,9 @@ title: "NCBT 프로젝트 설계 및 세팅"
 excerpt: "-"
 
 writer: Hwayeon Hong
-# categories: projects
-# permalink: /projects/:title/
+categories:
+  - projects
+permalink: /projects/NCBT/:title/
 tags:
   - [java, spring boot, gradle, mybatis, mysql]
 
