--- a/docs/CS/Maeil-mail/Server/2025-01-09-caching.md
+++ b/docs/CS/Maeil-mail/Server/2025-01-09-caching.md
@@ -15,7 +15,7 @@ nav_order: -4
 
 ---
 
-> #### ✏️ 나의 답변
+### ✏️ 나의 답변
 
 ``` markdown
 캐싱이란 외부에 요청하고 리턴받은 데이터들을 일정 시간 저장해두는 것을 말한다.
@@ -25,7 +25,7 @@ nav_order: -4
 
 <br>
 
-> #### 📍 정답 확인
+### 📍 정답 확인
 
 ### 캐시란 ? 사용자의 입장에서 데이터를 더 빠르게, 더 효율적으로 액세스할 수 있는 임시 저장소를 말한다.
 
@@ -35,7 +35,7 @@ nav_order: -4
 
 ### ✔️ 캐싱 전략
 
-> #### 읽기 전략 : Look-aside(Lazy Loading)
+> #### 읽기 전략 : Cache-aside(Lazy Loading)
 
 애플리케이션이 데이터를 읽을 때, 캐시 히트(캐시 저장소에 데이터가 있는 경우) 시 캐시에서 데이터를 불러오며, 캐시 미스(캐시 저장소에 데이터가 없는 경우) 시 원본 데이터베이스에서 조회하여 반환하는 방식이다. 애플리케이션은 캐시 미스가 발생하면 해당 데이터를 캐시에 적재한다.
 
