--- a/docs/Algorithms/brute force/2025-05-21-Q17945.md
+++ b/docs/Algorithms/brute force/2025-05-21-Q17945.md
@@ -76,7 +76,7 @@ public class Main {
 }
 ```
 
-<img src="/assets/images/pages/algorithms/exhaustive search/스크린샷 2025-05-21 오전 11.31.39.png">
+<img src="/assets/images/pages/algorithms/brute force/스크린샷 2025-05-21 오전 11.31.39.png">
 
 ## 💡 시간 복잡도, 공간 복잡도
 
